# PanstwaMiastaProjekt

./: README.md
Klient_CMAKE/: CMakeLists.txt  config.ini  lobbywindow.cpp  mainwindow.cpp
klient/: createroomwindow.cpp  createroomwindow.h  lobbywindow.h  mainwindow.cpp  mainwindow.h  project_klient0.pro  roomwindow.cpp  roomwindow.h  summarywindow.cpp  summarywindow.h
serwer/: CMakeLists.txt  serwer  serwer.cpp  sieci_panstwa_miasta.csv
